@@ -183,6 +183,8 @@ extern void  DIS_rpp_reset(void);
 extern void  checkret(char **, int);
 extern char *get_job_envvar(job *, char *);
 extern int   mom_open_socket_to_jobs_server(job* pjob, char *id, void (*message_hander)(int));
++extern int   stop_service_job(job *);
++extern int   is_service_job(job *);
 
 /* defined in mach-dependant mom_mach.c */
 extern int kill_task(struct task *, int, int);
